@@ -1,7 +1,9 @@
 1.5.6 (in development)
 ------------------------------------------------------------------------
+- Fix: Fixed behavior of calendar when moving to next/previous month when current day is in the range of 29-31.
 
 Who built 1.5.6:
+- thamara
 
 
 1.5.5
